feat: 게시글, 댓글에 isReported 필드 추가, 모집 마감 취소하기 기능 추가